--- a/emosProject/web/views/detail.html
+++ b/emosProject/web/views/detail.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>E Mobile Menu Order System.</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="/emos/css/style.css"> </head>
+    <link rel="stylesheet" href="/emos/css/style.css">
+</head>
 
 <body>
     <header id="header02"> <a href="/emos/index.html">
@@ -31,7 +33,9 @@
                                       >
                                     
                                     <a href="#" class="w3-button w3-display-right">로그인</a>
-                                </form>                               <div class="w3-display-bottommiddle" id="loginservice">
+                                </form>
+                                
+                                <div class="w3-display-bottommiddle" id="loginservice">
                                 <a href="#" class="w3-button w3-indigo">기업회원가입</a>
                                 <a href="#" class="w3-button w3-green">아이디 찾기</a>
                                 <a href="#" class="w3-button w3-teal">비밀번호 찾기</a>
@@ -43,13 +47,16 @@
     
     
     
-    <section id="detail01" class="detail">
-        <div class="w3-content w3-display-container">
+    <section id="detail01" class="detail ">
+        <div class="w3-content w3-display-container ">
             <img src="/emos/image/store/detail/1112.jpg" width="100%" height="300px">
-            <div id="detailname" class>
-                
+            
+            <div id="detailname" class ="w3-display-middle">
+                <div></div>
+                <b class ="w3-center">Waffle house</b>
             </div>
-            <div id="detailinfo" style="color:black" >
+            
+            <div id="detailinfo" style="color:black" ><br>
                 <h3>상세정보</h3>
                 <p>
                     <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 서울 강남구 테헤란로2길 27 2층 (우)06241 지번역삼동 826-26 <br>
