--- a/emosProject/web/css/style.css
+++ b/emosProject/web/css/style.css
@@ -266,7 +266,7 @@ section {
     position: absolute;
     width: 80%;
     height: 18%;
-    top: 265px;
+    top: 270px;
     
 }
 
@@ -278,7 +278,7 @@ section {
     border-radius: 8px;
     opacity: 0.7;
     top: 0;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2)
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 #detailname b{
