--- a/emosProject/web/css/style.css
+++ b/emosProject/web/css/style.css
@@ -1,6 +1,6 @@
 @CHARSET "UTF-8";
 
-/*
+            /*
             =====================
             ==      lay out    ==
             =====================
@@ -9,7 +9,6 @@
 * {
     padding: 0px;
     margin: 0px;
-    color: white;
 }
 
 body {
@@ -128,6 +127,7 @@ section {
     width: 100px;
     height: 40px;
     padding: 10px;
+    color: white;
 }
 
 
@@ -179,6 +179,7 @@ section {
     font-size: 110px;
     opacity: 0.8;
     top: px;
+    color: white;
 }
 
 .mainbtn:hover {
@@ -377,4 +378,91 @@ footer {
     background-color: #333;
     opacity: 0.7;
     margin-top: 25px;
+    color: white;
+}
+
+
+            /*
+            =====================
+            ==      enroll     ==
+            =====================
+            */
+
+
+
+
+#enrolltab li{
+    width: 50%;
+}
+
+
+#enrolluser input{
+    margin: 10px;
+    border-radius: 5px;
+    height: 35px;
+}
+
+.p1{
+    width: 53%
+}
+
+.agreet{
+    margin-left: 120px;
+}
+
+#username{
+    width:15%;
+}
+.phone{
+    width:15.5%;
+}
+
+.birth{
+    width:15.9%;
+}
+
+#en1{
+    padding-top: 30px;
+}
+
+#checkall{
+    width: 30%;
+    background: blue;
+    color: white
+}
+
+#enrollcancle{
+    width: 30%;
+    background: red;
+    color: white
+}
+
+p{ 
+    position: relative;
+}
+
+.gender{
+    width: 15px
+}
+
+label{
+    position: relative;
+    top:-10px;    
+}
+
+#genp{
+    width: 40%;
+    left: 9%;    
+}
+
+.text{
+    height: 25px;
+}
+
+.agreement{
+    background-color: #eee;
+    height: 500px;
+    border: 1px dotted black;
+    overflow: auto;
+    padding: 10px 100px;
 }
