--- a/emosProject/web/views/member/enroll.html
+++ b/emosProject/web/views/member/enroll.html
@@ -78,7 +78,7 @@ function myFunction(id) {
 </head>
 
 <body>
-    <header id="header02"> <a href="../../index.html">
+    <header id="header02"> <a href="../../index.jsp">
         <img id="logo2" src="../../image/logo/logo.png"></a>
         <div class="w3-display-right" style="margin-right:20px"> <button href="#" class="w3-button" style="color:white;border: solid 1px white; border-radius :3px" onclick="document.getElementById('id02').style.display='block'">로그인</button> <a href="#" class="w3-button w3-yellow" style="border-radius :3px">회원가입</a> </div>
         
@@ -349,7 +349,7 @@ function myFunction(id) {
             <input type="button" id="checkid" value="중복체크">
             </p>
             <p>비밀번호&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <input type="password" name="pw" id="pw" placeholder="영문 숫자 8글자 이상" class="p1">
+            <input type="password" name="pw1" id="pw1" placeholder="영문 숫자 8글자 이상" class="p1">
             </p>
             <p>비밀번호 확인
             <input type="password" name="pw2" id="pw2" placeholder="비밀번호 확인" class="p1">
