--- a/emosProject/web/css/style.css
+++ b/emosProject/web/css/style.css
@@ -207,7 +207,7 @@ section {
     height: 27px;
 }
 
-#login01 a {
+#login01 button{
     background: #0c0642;
     height: 60px;
     text-align: center;
