--- a/emosProject/web/views/member/enroll/usedinfo.html
+++ b/emosProject/web/views/member/enroll/usedinfo.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+</head>
+<body>
+
 제 1 조 (목적)
 본 약관은 EMOS(이하 "회사")가 운영하는 "서비스"를 이용함에 있어 "회사"와 회원간의 이용 조건 및 제반 절차, 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 한다.
 제 2 조 (용어의 정의)
@@ -143,3 +150,7 @@
 ② 전항의 노력에도 불구하고, 동 분쟁에 관한 소송은 "회사"의 주소지 관할법원으로 한다.
 부칙
 - 이 약관은 2017년 2월 10일부터 시행한다.
+
+</body>
+
+</html>
