--- a/emosProject/web/views/search.html
+++ b/emosProject/web/views/search.html
@@ -91,7 +91,7 @@
     
     
     <section id="searchsec02">
-        <div class="container">
+        <div class="container  w3-display-container">
             <p style="color : black; font-size :20px">- 검색결과 -</p>
             <a href="detail.html">
             <div class="w3-third w3-section">
